# name2gender-rs

./: Cargo.toml  README.md  model.msgpack
benches/: benchmark.rs
data/: gender_type.csv
src/: lib.rs  main.rs
