[package]
name = "name2gender"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.15.6", features = ["serde"] }
linfa = { git = "https://github.com/kakserpom/linfa", branch = "linfa_bayes_MultinomialNb_predict_proba", features = ["serde"], package = "linfa" }
linfa-bayes = { git = "https://github.com/kakserpom/linfa", branch = "linfa_bayes_MultinomialNb_predict_proba", features = ["serde"], package = "linfa-bayes" }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.0"
rmp-serde = "1.3.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
